final_clippy_check.txt
cargo :     Checking AgroCLI v1.2.0 
(C:\Users\setia\Downloads\AgroCLI)
At line:1 char:1
+ cargo clippy --all-targets 
--all-features -- -D warnings 2>&1 | Out-F 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified 
   : (    Checking Ag...nloads\AgroCLI):S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeComman 
   dError
 
error[E0425]: cannot find function 
`water_plant` in this scope
   --> src\ai\mod.rs:354:25
    |
354 |                         
water_plant(name, sec).await;
    |                         ^^^^^^^^^^^ 
not found in this scope
    |
help: consider importing this function 
through its public re-export
    |
  3 + use crate::water_plant;
    |

error[E0425]: cannot find function 
`water_plant` in this scope
   --> src\ai\mod.rs:496:9
    |
496 |         
water_plant("Simulator-Plant", 3).await;
    |         ^^^^^^^^^^^ not found in 
this scope
    |
help: consider importing this function 
through its public re-export
    |
  3 + use crate::water_plant;
    |

error[E0425]: cannot find function 
`select_provider` in this scope
   --> src\ai\mod.rs:128:20
    |
128 |     let provider = 
select_provider()?;
    |                    ^^^^^^^^^^^^^^^ 
not found in this scope

error[E0425]: cannot find function 
`get_api_key_for_provider` in this scope
   --> src\ai\mod.rs:133:19
    |
133 |     let api_key = 
get_api_key_for_provider(&provider)?;
    |                   
^^^^^^^^^^^^^^^^^^^^^^^^ not found in this 
scope

error[E0425]: cannot find function 
`display_agent_instructions` in this scope
   --> src\ai\mod.rs:152:5
    |
152 |     display_agent_instructions(api_ke
y.is_none());
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ not 
found in this scope

error[E0277]: the size for values of type 
`str` cannot be known at compilation time
   --> src\ai\mod.rs:188:16
    |
188 |         if let Some(ref key) = 
api_key {
    |                ^^^^^^^^^^^^^ doesn't 
have a size known at compile-time
    |
    = help: the trait `std::marker::Sized` 
is not implemented for `str`
note: required by a bound in 
`std::prelude::v1::Some`
   --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d4
4e8e96674cf\library\core\src\option.rs:608:
5

Some errors have detailed explanations: 
E0277, E0425.
For more information about an error, try 
`rustc --explain E0277`.
error: could not compile `AgroCLI` (bin 
"AgroCLI") due to 6 previous errors
warning: build failed, waiting for other 
jobs to finish...
error: could not compile `AgroCLI` (bin 
"AgroCLI" test) due to 6 previous errors
